--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
   <groupId>io.streamnative.ecosystem</groupId>
   <artifactId>pulsar-io-cloud-storage</artifactId>
-  <version>2.9.0-rc-202110221101</version>
+  <version>2.10.0-SNAPSHOT</version>
   <name>Pulsar Ecosystem :: IO Connector :: Cloud Storage Project</name>
   <description>Cloud Storage Connector integrates Apache Pulsar with Cloud Storage.</description>
 
@@ -46,7 +46,8 @@
     <jackson.version>2.13.2</jackson.version>
     <jackson-databind.version>2.13.2.1</jackson-databind.version>
     <lombok.version>1.16.22</lombok.version>
-    <pulsar.version>2.9.0-rc-202110221101</pulsar.version>
+    <pulsar.groupId>com.datastax.oss</pulsar.groupId>
+    <pulsar.version>2.10.4.0</pulsar.version>
     <parquet.version>1.12.2</parquet.version>
     <awsjavasdk.version>1.12.148</awsjavasdk.version>
     <aws.java.sdk2.version>2.16.1</aws.java.sdk2.version>
@@ -97,12 +98,12 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>io.streamnative</groupId>
+        <groupId>${pulsar.groupId}</groupId>
         <artifactId>pulsar-io-core</artifactId>
         <version>${pulsar.version}</version>
       </dependency>
       <dependency>
-        <groupId>io.streamnative</groupId>
+        <groupId>${pulsar.groupId}</groupId>
         <artifactId>pulsar-io-common</artifactId>
         <version>${pulsar.version}</version>
       </dependency>
@@ -127,7 +128,7 @@
         <version>${spotbugs-annotations.version}</version>
       </dependency>
       <dependency>
-        <groupId>io.streamnative</groupId>
+        <groupId>${pulsar.groupId}</groupId>
         <artifactId>jclouds-shaded</artifactId>
         <version>${pulsar.version}</version>
       </dependency>
@@ -302,7 +303,7 @@
 
     <!-- runtime dependencies -->
     <dependency>
-      <groupId>io.streamnative</groupId>
+      <groupId>${pulsar.groupId}</groupId>
       <artifactId>pulsar-io-core</artifactId>
     </dependency>
 
@@ -315,7 +316,7 @@
       <artifactId>jackson-dataformat-yaml</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.streamnative</groupId>
+      <groupId>${pulsar.groupId}</groupId>
       <artifactId>jclouds-shaded</artifactId>
       <exclusions>
         <exclusion>
@@ -569,7 +570,7 @@
       <version>3.11</version>
     </dependency>
     <dependency>
-      <groupId>io.streamnative</groupId>
+      <groupId>${pulsar.groupId}</groupId>
       <artifactId>pulsar-io-common</artifactId>
     </dependency>
     <dependency>
@@ -578,12 +579,12 @@
       <version>${jaxb-api}</version>
     </dependency>
     <dependency>
-      <groupId>io.streamnative</groupId>
+      <groupId>${pulsar.groupId}</groupId>
       <artifactId>pulsar-client-original</artifactId>
       <version>${pulsar.version}</version>
     </dependency>
     <dependency>
-      <groupId>io.streamnative</groupId>
+      <groupId>${pulsar.groupId}</groupId>
       <artifactId>pulsar-client-admin-original</artifactId>
       <version>${pulsar.version}</version>
     </dependency>
@@ -594,7 +595,7 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>io.streamnative</groupId>
+      <groupId>${pulsar.groupId}</groupId>
       <artifactId>pulsar-common</artifactId>
       <version>${pulsar.version}</version>
     </dependency>
@@ -800,11 +801,38 @@
       <id>central</id>
       <layout>default</layout>
       <url>https://repo1.maven.org/maven2</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
     </repository>
     <repository>
-      <id>bintray-streamnative-maven</id>
-      <name>bintray</name>
-      <url>https://dl.bintray.com/streamnative/maven</url>
+      <id>confluent</id>
+      <url>https://packages.confluent.io/maven/</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>datastax-releases</id>
+      <url>https://repo.datastax.com/artifactory/datastax-public-releases-local</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
     </repository>
   </repositories>
+  <distributionManagement>
+    <repository>
+      <id>datastax-releases</id>
+      <name>DataStax Local Releases</name>
+      <url>https://repo.aws.dsinternal.org/artifactory/datastax-releases-local/</url>
+    </repository>
+    <snapshotRepository>
+      <id>datastax-snapshots-local</id>
+      <name>DataStax Local Snapshots</name>
+      <url>https://repo.aws.dsinternal.org/artifactory/datastax-snapshots-local/</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
