--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,13 @@
     </license>
   </licenses>
 
+  <scm>
+    <connection>scm:git:git@github.com:datastax/pulsar-io-cloud-storage.git</connection>
+    <developerConnection>scm:git:git@github.com:datastax/pulsar-io-cloud-storage.git</developerConnection>
+    <url>https://github.com/datastax/pulsar-io-cloud-storage</url>
+    <tag>HEAD</tag>
+  </scm>
+
   <!-- keep all the dependencies used by all modules here -->
   <dependencyManagement>
     <dependencies>
