--- a/pom.xml
+++ b/pom.xml
@@ -94,8 +94,8 @@
   </licenses>
 
   <scm>
-    <connection>scm:git:git@github.com:datastax/pulsar-io-cloud-storage.git</connection>
-    <developerConnection>scm:git:git@github.com:datastax/pulsar-io-cloud-storage.git</developerConnection>
+    <connection>scm:git:https://github.com/datastax/pulsar-io-cloud-storage.git</connection>
+    <developerConnection>scm:git:https://github.com/datastax/pulsar-io-cloud-storage.git</developerConnection>
     <url>https://github.com/datastax/pulsar-io-cloud-storage</url>
     <tag>HEAD</tag>
   </scm>
