--- a/.github/workflows/ds-release.yml
+++ b/.github/workflows/ds-release.yml
@@ -17,7 +17,7 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Build with Maven
-        run: mvn -B package -DskipTests
+        run: mvn -B package -DskipTests -Dcheckstyle.skip
       - uses: ncipollo/release-action@v1
         with:
           artifacts: "**/target/*.nar"
