--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
   <groupId>io.streamnative.ecosystem</groupId>
   <artifactId>pulsar-io-cloud-storage</artifactId>
-  <version>2.10.1-SNAPSHOT</version>
+  <version>2.9.0-rc-202110221101</version>
   <name>Pulsar Ecosystem :: IO Connector :: Cloud Storage Project</name>
   <description>Cloud Storage Connector integrates Apache Pulsar with Cloud Storage.</description>
 
@@ -47,9 +47,8 @@
     <!-- connector dependencies -->
     <jackson.version>2.13.2</jackson.version>
     <jackson-databind.version>2.13.4.2</jackson-databind.version>
-    <lombok.version>1.18.32</lombok.version>
-    <pulsar.groupId>com.datastax.oss</pulsar.groupId>
-    <pulsar.version>2.10.4.0</pulsar.version>
+    <lombok.version>1.18.20</lombok.version>
+    <pulsar.version>3.2.2.1</pulsar.version>
     <avro.version>1.11.3</avro.version>
     <hadoop.version>3.3.6</hadoop.version>
     <parquet.version>1.13.1</parquet.version>
@@ -98,33 +97,26 @@
     </license>
   </licenses>
 
-  <scm>
-    <connection>scm:git:git@github.com:datastax/pulsar-io-cloud-storage.git</connection>
-    <developerConnection>scm:git:git@github.com:datastax/pulsar-io-cloud-storage.git</developerConnection>
-    <url>https://github.com/datastax/pulsar-io-cloud-storage</url>
-    <tag>HEAD</tag>
-  </scm>
-
   <!-- keep all the dependencies used by all modules here -->
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>${pulsar.groupId}</groupId>
+        <groupId>io.streamnative</groupId>
         <artifactId>pulsar-io-core</artifactId>
         <version>${pulsar.version}</version>
       </dependency>
       <dependency>
-        <groupId>${pulsar.groupId}</groupId>
+        <groupId>io.streamnative</groupId>
         <artifactId>pulsar-io-common</artifactId>
         <version>${pulsar.version}</version>
       </dependency>
       <dependency>
-        <groupId>${pulsar.groupId}</groupId>
+        <groupId>io.streamnative</groupId>
         <artifactId>pulsar-common</artifactId>
         <version>${pulsar.version}</version>
       </dependency>
       <dependency>
-        <groupId>${pulsar.groupId}</groupId>
+        <groupId>io.streamnative</groupId>
         <artifactId>pulsar-client-original</artifactId>
         <version>${pulsar.version}</version>
       </dependency>
@@ -149,7 +141,7 @@
         <version>${spotbugs-annotations.version}</version>
       </dependency>
       <dependency>
-        <groupId>${pulsar.groupId}</groupId>
+        <groupId>io.streamnative</groupId>
         <artifactId>jclouds-shaded</artifactId>
         <version>${pulsar.version}</version>
       </dependency>
@@ -329,19 +321,19 @@
 
     <!-- runtime dependencies -->
     <dependency>
-      <groupId>${pulsar.groupId}</groupId>
+      <groupId>io.streamnative</groupId>
       <artifactId>pulsar-io-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>${pulsar.groupId}</groupId>
+      <groupId>io.streamnative</groupId>
       <artifactId>pulsar-io-common</artifactId>
     </dependency>
     <dependency>
-      <groupId>${pulsar.groupId}</groupId>
+      <groupId>io.streamnative</groupId>
       <artifactId>pulsar-common</artifactId>
     </dependency>
     <dependency>
-      <groupId>${pulsar.groupId}</groupId>
+      <groupId>io.streamnative</groupId>
       <artifactId>pulsar-client-original</artifactId>
     </dependency>
 
@@ -354,7 +346,7 @@
       <artifactId>jackson-dataformat-yaml</artifactId>
     </dependency>
     <dependency>
-      <groupId>${pulsar.groupId}</groupId>
+      <groupId>io.streamnative</groupId>
       <artifactId>jclouds-shaded</artifactId>
       <exclusions>
         <exclusion>
@@ -422,34 +414,6 @@
     <dependency>
       <groupId>org.apache.avro</groupId>
       <artifactId>avro</artifactId>
-      <version>1.10.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-client</artifactId>
-      <version>3.3.3</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-yarn-api</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-yarn-client</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-yarn-common</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-mapreduce-client-jobclient</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-hdfs-client</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
@@ -636,40 +600,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-      <version>3.11</version>
-    </dependency>
-    <dependency>
-      <groupId>${pulsar.groupId}</groupId>
-      <artifactId>pulsar-io-common</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>javax.xml.bind</groupId>
-      <artifactId>jaxb-api</artifactId>
-      <version>${jaxb-api}</version>
-    </dependency>
-    <dependency>
-      <groupId>${pulsar.groupId}</groupId>
-      <artifactId>pulsar-client-original</artifactId>
-      <version>${pulsar.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>${pulsar.groupId}</groupId>
+      <groupId>io.streamnative</groupId>
       <artifactId>pulsar-client-admin-original</artifactId>
       <version>${pulsar.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>net.java.dev.jna</groupId>
-      <artifactId>jna</artifactId>
-      <version>5.7.0</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>${pulsar.groupId}</groupId>
-      <artifactId>pulsar-common</artifactId>
-      <version>${pulsar.version}</version>
-    </dependency>
+
   </dependencies>
 
   <build>
@@ -681,8 +617,6 @@
           <version>${maven-compiler-plugin.version}</version>
           <configuration>
             <encoding>UTF-8</encoding>
-            <source>${java.version}</source>
-            <target>${java.version}</target>
             <compilerArgs>
               <!--              <compilerArg>-Werror</compilerArg>-->
               <compilerArg>-Xlint:deprecation</compilerArg>
@@ -696,9 +630,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>${maven-surefire-plugin.version}</version>
           <configuration>
-<!--            <redirectTestOutputToFile>${redirectTestOutputToFile}</redirectTestOutputToFile>-->
             <reuseForks>false</reuseForks>
             <forkedProcessTimeoutInSeconds>1800</forkedProcessTimeoutInSeconds>
             <rerunFailingTestsCount>${testRetryCount}</rerunFailingTestsCount>
@@ -894,38 +826,11 @@
       <id>central</id>
       <layout>default</layout>
       <url>https://repo1.maven.org/maven2</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
     </repository>
     <repository>
-      <id>confluent</id>
-      <url>https://packages.confluent.io/maven/</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>datastax-releases</id>
-      <url>https://repo.datastax.com/artifactory/datastax-public-releases-local</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
+      <id>bintray-streamnative-maven</id>
+      <name>bintray</name>
+      <url>https://dl.bintray.com/streamnative/maven</url>
     </repository>
   </repositories>
-  <distributionManagement>
-    <repository>
-      <id>datastax-releases</id>
-      <name>DataStax Local Releases</name>
-      <url>https://repo.aws.dsinternal.org/artifactory/datastax-releases-local/</url>
-    </repository>
-    <snapshotRepository>
-      <id>datastax-snapshots-local</id>
-      <name>DataStax Local Snapshots</name>
-      <url>https://repo.aws.dsinternal.org/artifactory/datastax-snapshots-local/</url>
-    </snapshotRepository>
-  </distributionManagement>
 </project>
