--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,8 @@
     under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <groupId>org.apache</groupId>
     <artifactId>apache</artifactId>
@@ -29,7 +30,7 @@
 
   <groupId>io.streamnative.ecosystem</groupId>
   <artifactId>pulsar-io-cloud-storage</artifactId>
-  <version>3.2.0</version>
+  <version>3.2.0-SNAPSHOT</version>
   <name>Pulsar Ecosystem :: IO Connector :: Cloud Storage Project</name>
   <description>Cloud Storage Connector integrates Apache Pulsar with Cloud Storage.</description>
 
@@ -101,7 +102,7 @@
     <connection>scm:git:git@github.com:datastax/pulsar-io-cloud-storage.git</connection>
     <developerConnection>scm:git:git@github.com:datastax/pulsar-io-cloud-storage.git</developerConnection>
     <url>https://github.com/datastax/pulsar-io-cloud-storage</url>
-    <tag>pulsar-io-cloud-storage-3.2.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <!-- keep all the dependencies used by all modules here -->
