--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
   <groupId>io.streamnative.ecosystem</groupId>
   <artifactId>pulsar-io-cloud-storage</artifactId>
-  <version>2.10.3</version>
+  <version>2.10.3-SNAPSHOT</version>
   <name>Pulsar Ecosystem :: IO Connector :: Cloud Storage Project</name>
   <description>Cloud Storage Connector integrates Apache Pulsar with Cloud Storage.</description>
 
@@ -97,7 +97,7 @@
     <connection>scm:git:https://github.com/datastax/pulsar-io-cloud-storage.git</connection>
     <developerConnection>scm:git:https://github.com/datastax/pulsar-io-cloud-storage.git</developerConnection>
     <url>https://github.com/datastax/pulsar-io-cloud-storage</url>
-    <tag>pulsar-io-cloud-storage-2.10.3</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <!-- keep all the dependencies used by all modules here -->
