--- a/pom.xml
+++ b/pom.xml
@@ -892,38 +892,38 @@
       <id>central</id>
       <layout>default</layout>
       <url>https://repo1.maven.org/maven2</url>
-<!--      <snapshots>-->
-<!--        <enabled>false</enabled>-->
-<!--      </snapshots>-->
-<!--    </repository>-->
-<!--    <repository>-->
-<!--      <id>confluent</id>-->
-<!--      <url>https://packages.confluent.io/maven/</url>-->
-<!--      <snapshots>-->
-<!--        <enabled>false</enabled>-->
-<!--      </snapshots>-->
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
     </repository>
-<!--    <repository>-->
-<!--      <id>datastax-releases</id>-->
-<!--      <url>https://repo.datastax.com/artifactory/datastax-public-releases-local</url>-->
-<!--      <snapshots>-->
-<!--        <enabled>false</enabled>-->
-<!--      </snapshots>-->
-<!--      <releases>-->
-<!--        <enabled>true</enabled>-->
-<!--      </releases>-->
-<!--    </repository>-->
+    <repository>
+      <id>confluent</id>
+      <url>https://packages.confluent.io/maven/</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>datastax-releases</id>
+      <url>https://repo.datastax.com/artifactory/datastax-public-releases-local</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+    </repository>
   </repositories>
-<!--  <distributionManagement>-->
-<!--    <repository>-->
-<!--      <id>datastax-releases</id>-->
-<!--      <name>DataStax Local Releases</name>-->
-<!--      <url>https://repo.aws.dsinternal.org/artifactory/datastax-releases-local/</url>-->
-<!--    </repository>-->
-<!--    <snapshotRepository>-->
-<!--      <id>datastax-snapshots-local</id>-->
-<!--      <name>DataStax Local Snapshots</name>-->
-<!--      <url>https://repo.aws.dsinternal.org/artifactory/datastax-snapshots-local/</url>-->
-<!--    </snapshotRepository>-->
-<!--  </distributionManagement>-->
+  <distributionManagement>
+    <repository>
+      <id>datastax-releases</id>
+      <name>DataStax Local Releases</name>
+      <url>https://repo.aws.dsinternal.org/artifactory/datastax-releases-local/</url>
+    </repository>
+    <snapshotRepository>
+      <id>datastax-snapshots-local</id>
+      <name>DataStax Local Snapshots</name>
+      <url>https://repo.aws.dsinternal.org/artifactory/datastax-snapshots-local/</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
