--- a/pom.xml
+++ b/pom.xml
@@ -169,10 +169,12 @@
           </exclusion>
         </exclusions>
       </dependency>
+      <!-- Override transitive dependency version to fix vulnerability -->
       <dependency>
         <groupId>org.asynchttpclient</groupId>
         <artifactId>async-http-client</artifactId>
         <version>${asynchttpclient.version}</version>
+        <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>com.google.protobuf</groupId>
